--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,50 +6,11 @@ project(ucra C CXX)
 set(CMAKE_C_STANDARD 99)
 set(CMAKE_C_STANDARD_REQUIRED ON)
 
-# Use C++11 for WORLD compatibility
+# Set C++ standard for C++ sources
 set(CMAKE_CXX_STANDARD 11)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
-
-# Include ExternalProject module
-include(ExternalProject)
-
-# Option to enable WORLD engine support
-option(UCRA_ENABLE_WORLD "Enable WORLD vocoder engine" ON)
-
-if(UCRA_ENABLE_WORLD)
-    # Download and build WORLD vocoder library
-    ExternalProject_Add(world
-        GIT_REPOSITORY https://github.com/mmorise/World.git
-        GIT_TAG master
-        INSTALL_DIR ${CMAKE_CURRENT_BINARY_DIR}/world_install
-        CMAKE_ARGS
-            -DCMAKE_INSTALL_PREFIX=${CMAKE_CURRENT_BINARY_DIR}/world_install
-            -DCMAKE_BUILD_TYPE=${CMAKE_BUILD_TYPE}
-            -DCMAKE_CXX_STANDARD=11
-            -DCMAKE_POSITION_INDEPENDENT_CODE=ON
-        BUILD_BYPRODUCTS
-            ${CMAKE_CURRENT_BINARY_DIR}/world_install/lib/libworld.a
-            ${CMAKE_CURRENT_BINARY_DIR}/world_install/include/world/d4c.h
-            ${CMAKE_CURRENT_BINARY_DIR}/world_install/include/world/dio.h
-            ${CMAKE_CURRENT_BINARY_DIR}/world_install/include/world/harvest.h
-            ${CMAKE_CURRENT_BINARY_DIR}/world_install/include/world/cheaptrick.h
-            ${CMAKE_CURRENT_BINARY_DIR}/world_install/include/world/stonemask.h
-            ${CMAKE_CURRENT_BINARY_DIR}/world_install/include/world/synthesis.h
-            ${CMAKE_CURRENT_BINARY_DIR}/world_install/include/world/synthesisrealtime.h
-            ${CMAKE_CURRENT_BINARY_DIR}/world_install/include/world/constantnumbers.h
-            ${CMAKE_CURRENT_BINARY_DIR}/world_install/include/world/common.h
-    )
-
-    # Create an interface library for WORLD
-    add_library(world_lib INTERFACE)
-    add_dependencies(world_lib world)
-    target_include_directories(world_lib INTERFACE
-        ${CMAKE_CURRENT_BINARY_DIR}/world_install/include)
-    target_link_libraries(world_lib INTERFACE
-        ${CMAKE_CURRENT_BINARY_DIR}/world_install/lib/libworld.a)
-endif()
 
 # Define UCRA_STATIC globally for static library builds
 # This prevents Windows DLL import/export issues (LNK2019 errors)
@@ -58,7 +19,10 @@ add_compile_definitions(UCRA_STATIC)
 
 # Add cJSON library from third-party sources
 add_library(cjson STATIC third-party/cJSON.c)
-target_include_directories(cjson PUBLIC third-party)
+target_include_directories(cjson PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/third-party>
+    $<INSTALL_INTERFACE:include/third-party>
+)
 
 # Public header-only interface for now
 add_library(ucra INTERFACE)
@@ -69,22 +33,14 @@ target_include_directories(ucra INTERFACE
 )
 
 # Main UCRA library implementation
-set(UCRA_SOURCES src/ucra_manifest.c src/ucra_streaming.c)
-
-# Add WORLD engine wrapper if enabled
-if(UCRA_ENABLE_WORLD)
-    list(APPEND UCRA_SOURCES src/ucra_world_engine.cpp)
-endif()
+set(UCRA_SOURCES src/ucra_manifest.c src/ucra_streaming.c src/ucra_world_engine.cpp)
 
 add_library(ucra_impl STATIC ${UCRA_SOURCES})
-target_include_directories(ucra_impl PUBLIC include)
+target_include_directories(ucra_impl PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
+    $<INSTALL_INTERFACE:include>
+)
 target_link_libraries(ucra_impl cjson)
-
-# Link WORLD library if enabled
-if(UCRA_ENABLE_WORLD)
-    target_link_libraries(ucra_impl world_lib)
-    target_compile_definitions(ucra_impl PUBLIC UCRA_HAS_WORLD)
-endif()
 
 # Link pthread for streaming functionality (Unix only)
 if(NOT WIN32)
@@ -128,18 +84,6 @@ target_link_libraries(test_streaming_read ucra_impl)
 add_executable(test_streaming_integration tests/test_streaming_integration.c)
 target_link_libraries(test_streaming_integration ucra_impl)
 
-# WORLD Engine lifecycle test (only if WORLD is enabled)
-if(UCRA_ENABLE_WORLD)
-    add_executable(test_world_engine tests/test_world_engine.c)
-    target_link_libraries(test_world_engine ucra_impl)
-
-    add_executable(test_world_render tests/test_world_render.c)
-    target_link_libraries(test_world_render ucra_impl)
-
-    add_executable(test_world_comprehensive tests/test_world_comprehensive.c)
-    target_link_libraries(test_world_comprehensive ucra_impl)
-endif()
-
 # UCRA Legacy CLI Bridge (resampler.exe replacement)
 add_executable(resampler src/resampler_cli.c)
 target_link_libraries(resampler ucra_impl)
@@ -155,15 +99,63 @@ add_test(NAME streaming_buffering_test COMMAND test_streaming_buffering)
 add_test(NAME streaming_read_test COMMAND test_streaming_read)
 add_test(NAME streaming_integration_test COMMAND test_streaming_integration)
 
-# Add WORLD engine test if enabled
-if(UCRA_ENABLE_WORLD)
-    add_test(NAME world_engine_test COMMAND test_world_engine)
-    add_test(NAME world_render_test COMMAND test_world_render)
-    add_test(NAME world_comprehensive_test COMMAND test_world_comprehensive)
-endif()
-
 # Set test working directory to tests/ to find data files
 set_tests_properties(manifest_parsing_test PROPERTIES WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 set_tests_properties(comprehensive_test_suite PROPERTIES WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/tests)
 
 add_subdirectory(tests)
+
+# ===================================================================
+# Installation and Packaging
+# ===================================================================
+
+# Install headers
+install(DIRECTORY include/ucra
+        DESTINATION include
+        FILES_MATCHING PATTERN "*.h")
+
+# Install third-party headers (cJSON)
+install(FILES third-party/cJSON.h
+        DESTINATION include/third-party)
+
+# Install libraries
+install(TARGETS ucra ucra_impl cjson
+        EXPORT UCRATargets
+        LIBRARY DESTINATION lib
+        ARCHIVE DESTINATION lib
+        RUNTIME DESTINATION bin
+        INCLUDES DESTINATION include)
+
+# Install executables
+install(TARGETS resampler
+        DESTINATION bin)
+
+# Create and install CMake config files
+include(CMakePackageConfigHelpers)
+
+# Generate the config file that includes the targets
+configure_package_config_file(
+    "${CMAKE_CURRENT_SOURCE_DIR}/cmake/UCRAConfig.cmake.in"
+    "${CMAKE_CURRENT_BINARY_DIR}/UCRAConfig.cmake"
+    INSTALL_DESTINATION lib/cmake/UCRA
+)
+
+# Generate the version file
+write_basic_package_version_file(
+    "${CMAKE_CURRENT_BINARY_DIR}/UCRAConfigVersion.cmake"
+    VERSION 1.0.0
+    COMPATIBILITY SameMajorVersion
+)
+
+# Install the config files
+install(FILES
+    "${CMAKE_CURRENT_BINARY_DIR}/UCRAConfig.cmake"
+    "${CMAKE_CURRENT_BINARY_DIR}/UCRAConfigVersion.cmake"
+    DESTINATION lib/cmake/UCRA
+)
+
+# Install the targets
+install(EXPORT UCRATargets
+        FILE UCRATargets.cmake
+        NAMESPACE UCRA::
+        DESTINATION lib/cmake/UCRA)
