Revert "refactor: validation suite and audio comparison tools"
This reverts commit 3a9ca18b95c2f3d424445d8540582b49c357c9c8.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -137,7 +137,7 @@ add_test(NAME streaming_read_test COMMAND test_streaming_read)
 add_test(NAME streaming_integration_test COMMAND test_streaming_integration)
 
 # Add Core Testing & Validation Toolchain tests (Task 8)
-add_test(NAME validation_suite_test COMMAND validation_suite --test-data ${CMAKE_CURRENT_SOURCE_DIR}/tests/data --output ${CMAKE_CURRENT_BINARY_DIR}/tests/output --tools ${CMAKE_CURRENT_BINARY_DIR}/Release)
+add_test(NAME validation_suite_test COMMAND validation_suite --test-data ${CMAKE_CURRENT_SOURCE_DIR}/tests/data --output ${CMAKE_CURRENT_BINARY_DIR}/tests/output --tools ${CMAKE_CURRENT_BINARY_DIR})
 add_test(NAME golden_runner_test COMMAND golden_runner ${CMAKE_CURRENT_SOURCE_DIR}/tests/data/test_case_001 ${CMAKE_CURRENT_BINARY_DIR}/tests/output/test_output.wav)
 add_test(NAME audio_compare_test COMMAND audio_compare ${CMAKE_CURRENT_SOURCE_DIR}/tests/data/golden_ref.wav ${CMAKE_CURRENT_SOURCE_DIR}/tests/data/test_sample.wav)
 add_test(NAME f0_rmse_test COMMAND f0_rmse_calc ${CMAKE_CURRENT_SOURCE_DIR}/tests/data/test_f0_curve.txt ${CMAKE_CURRENT_SOURCE_DIR}/tests/data/test_f0_curve.txt)
