--- a/bindings/dotnet/UCRA.NET.csproj
+++ b/bindings/dotnet/UCRA.NET.csproj
@@ -13,6 +13,9 @@
     <RepositoryUrl>https://github.com/ucra/ucra</RepositoryUrl>
     <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  <!-- Avoid duplicate assembly attributes when building under CMake/SDK -->
+  <GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+  <GenerateTargetFrameworkAttribute>false</GenerateTargetFrameworkAttribute>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -26,6 +29,8 @@
   <ItemGroup>
     <Compile Remove="tests/**" />
     <Content Remove="tests/**" />
+  <Compile Remove="samples/**" />
+  <Content Remove="samples/**" />
   </ItemGroup>
 
 </Project>
